--- a/src/styles/sobre.module.css
+++ b/src/styles/sobre.module.css
@@ -20,13 +20,32 @@
     align-items: center;
 }
 
-.sobreText .sectionTitle {
-    font-size: 3.5rem;
+.sectionTitle {
+    font-size: 2.8rem;
     font-weight: 700;
     color: #2c2c2c;
+    text-align: center;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.sobreText .sectionTitle {
+    font-size: 3.5rem;
     margin-bottom: 30px;
     line-height: 1.2;
     letter-spacing: -0.5px;
+}
+
+.sectionTitle::after {
+    content: '';
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 4px;
+    background: linear-gradient(90deg, #d4a574, #c89b68);
+    border-radius: 2px;
 }
 
 .lead {
@@ -57,27 +76,6 @@
 
 .storySection {
     margin-bottom: 100px;
-}
-
-.storySection .sectionTitle {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #2c2c2c;
-    text-align: center;
-    margin-bottom: 50px;
-    position: relative;
-}
-
-.storySection .sectionTitle::after {
-    content: '';
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-    height: 4px;
-    background: linear-gradient(90deg, #d4a574, #c89b68);
-    border-radius: 2px;
 }
 
 .storyContent {
@@ -143,27 +141,6 @@
     padding: 80px 0;
 }
 
-.valuesSection .sectionTitle {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #2c2c2c;
-    text-align: center;
-    margin-bottom: 70px;
-    position: relative;
-}
-
-.valuesSection .sectionTitle::after {
-    content: '';
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-    height: 4px;
-    background: linear-gradient(90deg, #d4a574, #c89b68);
-    border-radius: 2px;
-}
-
 .valuesGrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -206,27 +183,6 @@
 
 .teamSection {
     margin-bottom: 80px;
-}
-
-.teamSection .sectionTitle {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #2c2c2c;
-    text-align: center;
-    margin-bottom: 70px;
-    position: relative;
-}
-
-.teamSection .sectionTitle::after {
-    content: '';
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-    height: 4px;
-    background: linear-gradient(90deg, #d4a574, #c89b68);
-    border-radius: 2px;
 }
 
 .teamGrid {
@@ -316,18 +272,16 @@
         font-size: 2rem;
     }
 
+    .sectionTitle {
+        font-size: 2rem;
+    }
+
     .lead {
         font-size: 1.1rem;
     }
 
     .sobreImage img {
         height: 300px;
-    }
-
-    .storySection .sectionTitle,
-    .valuesSection .sectionTitle,
-    .teamSection .sectionTitle {
-        font-size: 2rem;
     }
 
     .storyText {
